--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -17,13 +17,15 @@
             android:id="@+id/idGenre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"/>
+            android:textSize="13sp"
+            android:text="ID"/>
 
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp" />
+            android:textSize="20sp"
+            android:text="Genre Name"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
