--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/genreList"
+            android:id="@+id/genres"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
