--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -7,6 +7,7 @@
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:layout_marginTop="4dp">
+    card_view:cardCornerRadius="4dp"
 
     <LinearLayout
         android:layout_width="match_parent"
