--- a/app/src/main/res/layout/item_film.xml
+++ b/app/src/main/res/layout/item_film.xml
@@ -10,19 +10,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/idFilm"
+        <ImageView
+            android:id="@+id/imageFilm"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="5dp"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="13sp"/>
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/filmTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"/>
+            <TextView
+                android:id="@+id/idFilm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"/>
+
+            <TextView
+                android:id="@+id/filmTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"/>
+
+        </LinearLayout>
+
     </LinearLayout>
+
 
 </android.support.v7.widget.CardView>
