--- a/app/src/main/res/layout/film_information.xml
+++ b/app/src/main/res/layout/film_information.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/titleFilm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"/>
+                android:textSize="30dp"/>
 
             <TextView
                 android:id="@+id/date"
@@ -38,7 +38,7 @@
                 android:id="@+id/average"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="15dp"/>
+                android:textSize="20dp"/>
 
         </LinearLayout>
 
@@ -48,7 +48,8 @@
         android:id="@+id/overview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15dp"/>
+        android:textSize="20dp"
+        android:layout_margin="5dp" />
 
 
 </LinearLayout>
