--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorBackground">
 
         <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -14,11 +15,7 @@
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/genres"
-            android:scrollbars="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-        </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView android:id="@+id/genres" android:scrollbars="vertical"
+            android:layout_width="match_parent" android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
